sca_cdce 1.5 beta

--- a/Framework/jquery-ui-1.13.2.custom/index.html
+++ b/Framework/jquery-ui-1.13.2.custom/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="us">
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8"><link rel="icon" href="../favicon.ico" />
 	<title>jQuery UI Example Page</title>
 	<link href="jquery-ui.css" rel="stylesheet">
 	<style>
